# PromptEngineering

./: .gitignore  README.md  main.py  pyproject.toml
src/1_Guidelines/: s1ep01-separator.py  s1ep02.structured_output.py  s1ep03.ask_check-2.py  s1ep04.few_shot.py  s1ep05.point_steps.py  s1ep06.ask_compare.py
src/2_Iterative/: s2ep01.intro.py  s2ep02.check_output.ipynb
src/3_Summarizing/: 00.template.py  01.brif_report.py  02.set_focus.py  03.set_focus_2.py  04.extract_key_info.py  05.summary_multi_reviews.py
src/4_inferring/: 00.template.py  01.extract_emotion.py  02.extract_emotion.py  03.judge_emotion_type.py  04.extract_angry.py  05.extract_key_val.py  06.multi_tasks_one_time.py  07.infer_topic.py  08.make_reminder_1.py  09.make_reminder_2.py
src/5_Transforming/: 00.template.py  01.zhcn2spanish.py  02.check_language.py  03.multi_lang_trans.py  04.trans_and_be_formal.py  05.batch_trans.py  06.adjust_style.py  07.trans_format.ipynb  07.trans_format.py  08.spell_check_and_correction.py  09.grammerly.ipynb  10.comprehensive_example.py
src/6_Expending/: 00.template.py  01.auto_reply_email.py  02.edit_temperature.py
